[package]
name = "rustmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
comrak = "0.16.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
